After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 730387 - Mouse cursor disappears when control bar disappears and popover gets active
Mouse cursor disappears when control bar disappears and popover gets active
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: Movie player
3.12.x
Other Linux
: Normal normal
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-05-19 16:39 UTC by GP
Modified: 2014-06-02 15:50 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description GP 2014-05-19 16:39:07 UTC
1. Open Videos
2. Play a video
3. Move your cursor outside of the window
4. Wait until the hovering menu disappears
5. Open the gear popover without hovering the video
6. Hover the video

Expected result: we can see the cursor over the video
What happens: the cursor disappears

I have the latest version of GNOME Videos on Fedora using COPR.
Comment 1 Bastien Nocera 2014-06-02 15:50:40 UTC
Fixed in gnome-3-12 and master.