backend: Fix hidden cursor with visible popup

Avoid the cursor being hidden when a popover menu is shown by forcing
the popup to be shown.

Reproducer:
1. Open Videos
2. Play a video
3. Move your cursor outside of the window
4. Wait until the hovering menu disappears
5. Open the gear popover without hovering the video
6. Hover the video

https://bugzilla.gnome.org/show_bug.cgi?id=730387